# Rubetek-Test-Assignment

./: .clang-format  .gitignore  CMakeLists.txt
task_1/: CMakeLists.txt
task_1/src/: main.cpp  main.h
task_1/test/: CMakeLists.txt  test_lexer.cpp  test_parser.cpp  test_solver.cpp
task_2/: CMakeLists.txt
task_2/src/: dmm.c  dmm.h
task_2/test/: CMakeLists.txt  test_dmm.cpp
